feat : add fitur history buddy, export hasil penialain buddy, dashboard, leaderboard, first login reward.
